# rust-ear-trainer

./: .gitignore  Cargo.toml
migrations/2023-10-17-214513_create_users/: up.sql
src/: commands.rs  constants.rs  main.rs  models.rs  schema.rs
