[package]
name = "rust-ear-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["sqlite"] }
midir = "0.9.1"
dotenvy = "0.15.7"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
